# wenlan

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  HISTORY.md  PRIVACY.md  README.md  README.zh-Hans.md  README.zh-Hant.md  RELEASING.md  SECURITY.md  analyze_paired.py  clippy.toml  install.sh  package.json  plugin-contract.json  release-please-config.json  test_analyze_paired.py
crates/origin-cli/: Cargo.toml  README.md
crates/origin-cli/npm/: .gitignore  package.json
crates/origin-cli/src/: client.rs  lib.rs  main.rs  output.rs
crates/origin-cli/tests/: cli_integration.rs  distribution.rs  space_cli.rs
crates/origin-core/: Cargo.toml  README.md  build.rs
crates/origin-core/src/: access_tracker.rs  activity.rs  briefing.rs  cache.rs  classify.rs  config.rs  context_packager.rs  contradiction.rs  db.rs  decompose.rs  drift_guard.rs  engine.rs  error.rs  events.rs  extract.rs  importer.rs  ingest.rs  kg_quality.rs  lib.rs  llm_provider.rs  narrative.rs  onboarding.rs  pages.rs  post_ingest.rs  post_write.rs  quality_gate.rs  refinery.rs  rerank.rs  reranker.rs  schema.rs  spaces.rs  system_info.rs  tags.rs  temporal.rs  temporal_extract.rs  temporal_query.rs  topic_match.rs  tuning.rs  working_memory.rs
crates/origin-core/tests/: build_env.rs  cached_scenario_db_check.rs  daemon_handle.rs  distillation_quality.rs  eval_cost_caps.rs  eval_harness.rs  eval_report_paths.rs  eval_report_roundtrip.rs  eval_save_guards.rs  provenance_p2.rs  provenance_p3.rs  space_scoping_e2e.rs
crates/origin-mcp/: CLAUDE.md  Cargo.toml  README.md
crates/origin-mcp/npm/: install.js  package.json  run.js
crates/origin-mcp/src/: auth.rs  client.rs  lib.rs  lock_state.rs  main.rs  self_update_check.rs  serve.rs  token.rs  tools.rs  types.rs  version_check.rs
crates/origin-mcp/tests/: list_spaces_e2e.rs  real_router.rs  serve_integration.rs  space_roundtrip_e2e.rs  type_contract.rs
crates/origin-server/: Cargo.toml  README.md
crates/origin-server/src/: cmd_backfill.rs  cmd_setup.rs  config_routes.rs  error.rs  import_routes.rs  ingest_batcher.rs  ingest_routes.rs  lib.rs  main.rs  memory_routes.rs  refinery_routes.rs  reflection_debounce.rs  router.rs  routes.rs  scheduler.rs  state.rs  websocket.rs
crates/origin-server/tests/: context_space_filter_e2e.rs  curation_mutate_routes.rs  curation_read_routes.rs  list_pages_by_space_e2e.rs  list_spaces_e2e.rs  port_discovery.rs  refinery_routes.rs  route_convergence.rs  search_docpath_space_e2e.rs  space_header_fallback.rs  triggered_revisions.rs
crates/origin-types/: Cargo.toml  README.md
crates/origin-types/src/: lib.rs  memory.rs  memory_type.rs  onboarding.rs  pages.rs  requests.rs  responses.rs  sources.rs  system_info.rs  working_memory.rs
crates/wenlan-cli/: Cargo.toml  README.md
crates/wenlan-cli/npm/: .gitignore  package.json  run.js
crates/wenlan-cli/src/: client.rs  lib.rs  main.rs
crates/wenlan-cli/tests/: cli_integration.rs  distribution.rs  enrichment_cli.rs  ingest_cli.rs  lint_cli.rs  space_cli.rs
crates/wenlan-core/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/wenlan-core/examples/: cleanup-legacy-captures.rs
crates/wenlan-core/src/: activity.rs  briefing.rs  citations.rs  classify.rs  config.rs  context_packager.rs  contradiction.rs  db.rs  decay.rs  derived_artifact_state.rs  document_enrichment.rs  drift_guard.rs  engine.rs  env_compat.rs  error.rs  events.rs  extract.rs  faithfulness.rs  importer.rs  ingest.rs  kg_quality.rs  lib.rs  llm_classifier.rs  llm_provider.rs  maintenance.rs  memory_schema.rs  migrate_rename.rs  narrative.rs  on_device_models.rs  onboarding.rs  page_map_improve.rs  page_projection_tracker.rs  pages.rs  post_ingest.rs  post_write.rs  privacy.rs  provenance.rs  quality_gate.rs  read_scope.rs  reconcile.rs  (+11 more)
crates/wenlan-core/tests/: build_env.rs  cached_scenario_db_check.rs  chat_import_e2e.rs  distill_redesign_e2e.rs  distillation_quality.rs  doc_reconcile_e2e.rs  eval_cost_caps.rs  eval_harness.rs  eval_report_paths.rs  eval_report_roundtrip.rs  eval_save_guards.rs  folder_ingest_e2e.rs  lint_maintenance_probe_e2e.rs  page_citations_e2e.rs  pdf_ordered_text.rs  provenance_p2.rs  provenance_p3.rs  read_scope.rs  space_scoping_e2e.rs
crates/wenlan-server/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/wenlan-server/src/: cmd_backfill.rs  config_routes.rs  error.rs  host_activity.rs  import_routes.rs  ingest_batcher.rs  ingest_batcher_worker_state_test.rs  ingest_routes.rs  knowledge_routes.rs  lib.rs  lifecycle.rs  lint_endpoint_test.rs  lint_routes.rs  macos_host_activity.m  main.rs  maintenance_coordinator.rs  memory_routes.rs  onboarding_routes.rs  page_map_routes.rs  read_scope.rs  refinery_routes.rs  reflection_debounce.rs  repair_endpoint_test.rs  repair_routes.rs  route_registry.rs  router.rs  routes.rs  runtime_observation.rs  runtime_observation_test.rs  scheduler.rs  security.rs  sensitive_read_routes_test.rs  source_routes.rs  space_header.rs  state.rs  websocket.rs
crates/wenlan-server/tests/: ambient_live_daemon.rs  context_space_filter_e2e.rs  curation_mutate_routes.rs  curation_read_routes.rs  graceful_shutdown.rs  list_pages_by_space_e2e.rs  list_spaces_e2e.rs  page_manual_edit_gate.rs  port_discovery.rs  port_taken_no_db_init.rs  read_scope.rs  refinery_routes.rs  route_convergence.rs  search_docpath_space_e2e.rs  space_header_fallback.rs  space_scoping_e2e.rs  triggered_revisions.rs
crates/wenlan-types/: AUDIT.md  Cargo.toml  README.md
crates/wenlan-types/src/: brand.rs  briefing.rs  entities.rs  events.rs  import.rs  lib.rs  lint.rs  lint_agent.rs  lint_catalog.rs  lint_check.rs  lint_config.rs  lint_contract.rs  lint_coverage.rs  lint_group.rs  lint_report.rs  lint_runtime.rs  lint_tests.rs  memory.rs  narrative.rs  onboarding.rs  page_map.rs  pages.rs  repair.rs  repair_plan.rs  repair_plan_tests.rs  repair_tests.rs  requests.rs  responses.rs  sources.rs  system_info.rs  working_memory.rs
crates/wenlan-types/tests/: page_draft_wire.rs  (+1 more)
(+796 files in other folders)
