[workspace]
resolver = "2"
members = [
    "crates/origin-cli",
    "crates/origin-types",
    "crates/origin-core",
    "crates/origin-server",
    "crates/origin-mcp",
]

[workspace.package]
version = "0.7.0"   # x-release-please-version
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/7xuanlu/origin"

[workspace.dependencies]
# Internal crates — both path AND version required for cargo publish
origin-types = { path = "crates/origin-types", version = "0.7.0" }
origin-core  = { path = "crates/origin-core",  version = "0.7.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log"] }
log = "0.4"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
# OpenSSL vendored: build OpenSSL from source instead of linking the
# system library. Required because fastembed → hf-hub → native-tls →
# openssl-sys is transitive, and the `cross` Linux build container's
# system OpenSSL is too old (1.0.2 from Ubuntu 16.04 base). Declare
# `openssl-sys` DIRECTLY with the `vendored` feature — the previous
# attempt routed through the `openssl` wrapper crate and the feature
# did not propagate to openssl-sys inside cross's container resolver.
openssl-sys = { version = "0.9", features = ["vendored"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# Database
libsql = { version = "0.9", default-features = false, features = ["core", "replication"] }

# Embeddings & LLM
fastembed = "5"

# Utilities
regex = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
hf-hub = "0.4"
encoding_rs = "0.8"
lru = "0.12"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
pdf-extract = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
service-manager = "0.11"
serde_yaml = "0.9"
sysinfo = "0.33"
image = "0.25"
toml = "0.8"
