[package]
name = "origin"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Origin CLI — talk to the local Origin daemon from your terminal."
default-run = "origin"

[[bin]]
name = "origin"
path = "src/main.rs"

[dependencies]
origin-types = { path = "../origin-types" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
