[package]
name = "origin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Origin CLI for setup, service management, and local AI work memory."
default-run = "origin"
publish = false

[[bin]]
name = "origin"
path = "src/main.rs"

[dependencies]
origin-core = { workspace = true }
origin-types = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
