[package]
name = "origin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core business logic for Origin — memory storage, retrieval, and processing"

[features]
default = []
closed-core-eval = []

[dependencies]
origin-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
pdf-extract = { workspace = true }
zip = { workspace = true }

# On-device LLM inference (phase 3b)
llama-cpp-2 = { workspace = true }
hf-hub = { workspace = true }
encoding_rs = { workspace = true }

# Memory DB (phase 3c)
tokio = { workspace = true }
libsql = { workspace = true }
fastembed = { workspace = true }
sha2 = { workspace = true }
lru = { workspace = true }

# Markdown chunking (PR #57, re-hosted from app to origin-core via PR #58 merge)
text-splitter = { version = "0.29.3", features = ["markdown", "tokenizers"] }

# System detection
sysinfo = { workspace = true }

# Business logic (phase 3d)
reqwest = { workspace = true }
# NOTE: rusqlite uses the `buildtime_bindgen` feature (NOT `bundled`) so it
# links against libsql's statically-bundled SQLite instead of a second copy.
# Having two bundled SQLite builds in the same binary causes libsql's
# thread-mode assertion to fail at runtime.
rusqlite = { version = "0.31", default-features = false }
# tempfile is used from eval/ runners (non-test code paths) in addition to
# the dev-dependency usage by other modules.
tempfile = { workspace = true }

# Benchmark binaries (model_benchmark, deep_distill, etc.)
env_logger = "0.11"

# tiktoken-rs is used from eval/ token_efficiency module (non-test code paths)
# for BPE token counting in quality-cost benchmarks. Same pattern as tempfile above:
# eval modules are not feature-gated, so their deps are regular deps.
tiktoken-rs = "0.6"
futures = { workspace = true }

[dev-dependencies]
temp-env = { version = "0.3", features = ["async_closure"] }
