[package]
name = "origin-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared wire-format types for Origin — the personal agent memory system."
homepage = "https://github.com/7xuanlu/origin"
authors = ["Qi-Xuan Lu <h164654156465@gmail.com>"]
readme = "README.md"
keywords = ["memory", "mcp", "origin", "agent"]
categories = ["data-structures", "api-bindings"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
