[package]
name = "wenlan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wenlan CLI for setup, service management, and local AI work memory."
default-run = "wenlan"
publish = false

[lib]
name = "wenlan_cli"
path = "src/lib.rs"

[[bin]]
name = "wenlan"
path = "src/main.rs"

[dependencies]
wenlan-core = { workspace = true }
wenlan-types = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
service-manager = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
# `which` for PATHEXT-aware binary resolution on Windows. std::process::Command
# only auto-appends `.exe`; .cmd / .bat live behind explicit-extension paths.
which = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
