[package]
name = "wenlan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core business logic for Wenlan — memory storage, retrieval, and processing"

[features]
default = []
closed-core-eval = []
eval-harness = []

[dependencies]
wenlan-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
pdf-extract = { workspace = true }
zip = { workspace = true }

# On-device LLM inference (phase 3b)
hf-hub = { workspace = true }
encoding_rs = { workspace = true }

# Memory DB (phase 3c)
tokio = { workspace = true }
libsql = { workspace = true }
fastembed = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }

# Markdown chunking (PR #57, re-hosted from app to wenlan-core via PR #58 merge)
text-splitter = { version = "0.29.3", features = ["markdown", "tokenizers"] }

# System detection
sysinfo = { workspace = true }

# Business logic (phase 3d)
reqwest = { workspace = true }
# NOTE: rusqlite uses the `buildtime_bindgen` feature (NOT `bundled`) so it
# links against libsql's statically-bundled SQLite instead of a second copy.
# Having two bundled SQLite builds in the same binary causes libsql's
# thread-mode assertion to fail at runtime.
rusqlite = { version = "0.31", default-features = false }
# tempfile is used from eval/ runners (non-test code paths) in addition to
# the dev-dependency usage by other modules.
tempfile = { workspace = true }
fs2 = { workspace = true }

# Benchmark binaries (model_benchmark, deep_distill, etc.)
env_logger = "0.11"

# tiktoken-rs is used from eval/ token_efficiency module (non-test code paths)
# for BPE token counting in quality-cost benchmarks. Same pattern as tempfile above:
# eval modules are not feature-gated, so their deps are regular deps.
tiktoken-rs = "0.6"
futures = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal", "sampler"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["sampler"] }

[build-dependencies]
sha2 = { workspace = true }

[[bin]]
name = "compare-baselines"
path = "src/bin/compare_baselines.rs"
required-features = ["eval-harness"]

[dev-dependencies]
temp-env = { version = "0.3", features = ["async_closure"] }
# test-util enables tokio::test(start_paused) for deterministic timeout tests
# (the `full` feature deliberately excludes test-util). Test-only.
tokio = { workspace = true, features = ["test-util"] }
