[package]
name = "wenlan-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless daemon for Origin — HTTP/MCP server without Tauri"

[lib]
name = "wenlan_server"
path = "src/lib.rs"

[[bin]]
name = "wenlan-server"
path = "src/main.rs"

[dependencies]
wenlan-types = { workspace = true }
wenlan-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
service-manager = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive"] }
futures = { workspace = true }
sha2 = "0.10"
# Pulls openssl-sys with the vendored feature (declared at workspace level).
# wenlan-server doesn't call openssl_sys directly, but the dep needs to land
# in at least one workspace-member's tree for cargo feature unification to
# apply the vendored feature to every transitive consumer.
openssl-sys = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
