[package]
name = "wenlan-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared wire-format types for Wenlan, the local-first personal agent memory system."
homepage = "https://wenlan.app"
documentation = "https://docs.rs/wenlan-types"
authors = ["Qi-Xuan Lu <h164654156465@gmail.com>"]
readme = "README.md"
keywords = ["memory", "mcp", "wenlan", "agent"]
categories = ["data-structures", "api-bindings"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
syn = { version = "2.0.117", default-features = false, features = ["full", "parsing", "visit"] }
